--- a/dangnhap.html
+++ b/dangnhap.html
@@ -58,7 +58,7 @@
                             </label>
                         </th>
                         <td>
-                            <input id="email" type="email" placeholder="Nhập email">
+                            <input id="email" type="email" name="email" placeholder="Nhập email">
                         </td>
                     </tr>
                     <tr>
@@ -68,7 +68,7 @@
                             </label>
                         </th>
                         <td>
-                            <input id="password" type="password" placeholder="Nhập mật khẩu">
+                            <input id="password" type="password" name="password" placeholder="Nhập mật khẩu">
                         </td>
                     </tr>
                     <tr>
@@ -98,5 +98,5 @@
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/965ecd562f.js" crossorigin="anonymous"></script>
-
+<script src="script/form_validate.js"></script>
 </html>
