--- a/gioithieu.html
+++ b/gioithieu.html
@@ -31,7 +31,7 @@
             </div>
        </div>
     </header>
-    <main id="gioi_thieu_page">
+    <main id="gioi_thieu_page" class="two-cols-right">
         <article id="gioi_thieu_article">
             <h1>Giới Thiệu</h1>
             <img src="images/gioithieu/bg-header-about.jpg" alt="">
