--- a/lienhe.html
+++ b/lienhe.html
@@ -105,5 +105,5 @@
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/965ecd562f.js" crossorigin="anonymous"></script>
-
+<script src="script/form_validate.js"></script>
 </html>
