--- a/sanpham.html
+++ b/sanpham.html
@@ -117,5 +117,5 @@
 </body>
 
 <script src="https://kit.fontawesome.com/965ecd562f.js" crossorigin="anonymous"></script>
-
+<script src="script/dathang.js"></script>
 </html>
