--- a/tintuc.html
+++ b/tintuc.html
@@ -32,7 +32,7 @@
             </div>
        </div>
     </header>
-    <main id="tintuc_page">
+    <main id="tintuc_page" class="two-cols-left">
         <h1>TIN TỨC</h1>
         <article>
             <h2>
