--- a/dangky.html
+++ b/dangky.html
@@ -45,6 +45,7 @@
                             <input 
                                 id="email"
                                 type="email"
+                                name="email"
                                 placeholder="Vui lòng nhập email"
                                 required
                             >
@@ -56,6 +57,7 @@
                             <input
                                 id="password"
                                 type="password"
+                                name="password"
                                 placeholder="Vui lòng nhập mật khẩu"
                                 required
                             >
@@ -118,5 +120,5 @@
     </footer>
 </body>
 <script src="https://kit.fontawesome.com/965ecd562f.js" crossorigin="anonymous"></script>
-
+<script src="script/form_validate.js"></script>
 </html>
