--- a/lienhe.html
+++ b/lienhe.html
@@ -19,7 +19,7 @@
         <img src="images/header-img1.png" alt="" class="header-img1">
         <img src="images/header-img2.png" alt="" class="header-img2">
         <img src="images/header-img3.png" alt="" class="header-img3">
-       <div class="nav_container">
+        <div class="nav_container">
             <nav>
                 <a href="trangchu.html">Trang Chủ</a>
                 <a href="gioithieu.html">Giới Thiệu</a>
@@ -30,12 +30,13 @@
                 <a href="lienhe.html">Liên Hệ</a>
             </nav>
             <div class="search_and_cart">
-                <input type="text" placeholder="Nhập nội dung cần tìm...">
-                <i class="fa-solid fa-magnifying-glass"></i>
+                <form class="search_form" method="get" action="timkiem.html">
+                    <input type="text" name="search" placeholder="Nhập nội dung cần tìm...">
+                    <i id="search_icon" class="fa-solid fa-magnifying-glass"></i>
+                </form>
                 <i class="fa-solid fa-cart-shopping"></i>
-    
             </div>
-       </div>
+        </div>
     </header>
     <main id="lienhe_page">
         <h1>Liên hệ</h1>
